--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
             rawdate = subtractOneMonthFromDate(new Date());
             date = rawdate.toISOString().substr(0, 10);
             let newsUrl = `https://api.worldnewsapi.com/search-news?api-key=${key}&source-countries=${location}&language=${language}&earliest-publish-date=${date}`;
+            let w = 0;
             while(true){
                 try {
                     const response = await fetch(newsUrl);
-                    console.log(api_keys[num])
                     if (!response.ok) {
                         throw new Error('Error fetching news API KEY IS DEAD :(');
+                        changeNum();
                         falseVar();
                     }
                     const data = await response.json();
@@ -104,13 +105,16 @@
                         changeNum();
                         falseVar();
                     }
-                    console.log(data.news);
                     return data.news;
                     break;
                 } catch (error) {
                     console.error('Error fetching news data: ', error);
                     changeNum();
                     falseVar();
+                }
+                w++;
+                if(w>100){
+                    break;
                 }
             }
         }
@@ -137,15 +141,72 @@
                 `);
             });
         }
+        function displayPins(code) {
+            let coords = geocodeLocation(code);
+            let q;
+            for (let z = 0; z < countryCoords.length; z++) {
+                if ((countryCoords[z].alpha2).toUpperCase() === (code.toUpperCase())) {
+                    q = countryCoords[z].country;
+                    break;
+                }
+            }
+            let marker = L.marker([coords.la, coords.lo], {
+                icon: L.AwesomeMarkers.icon({
+                    icon: 'circle',
+                    markerColor: 'red',
+                    prefix: 'fa',
+                    iconColor: 'black'
+                }),
+            }).addTo(map);
 
+            // Attach a click event handler to the marker
+            marker.on('click', function () {
+                // Make an API request to fetch news data for the selected country
+                fetchNewsData(code)
+                    .then((newsData) => {
+                        // Check if news data is available
+                        if (newsData && newsData.length > 0) {
+                            // Display the news data in a popup
+                            marker.bindPopup(`
+                                <h3>${q}</h3>
+                                <div>
+                                    <h4>Latest News:</h4>
+                                    <ul>
+                                        ${newsData
+                                            .filter(article => article.title.length >= 30)
+                                            .map(article => `<li><a href="${article.url}" target="_blank">${article.title}</a></li>`)
+                                            .join('')}
+                                    </ul>
+                                </div>
+                            `);
+                        } else {
+                            // No news available
+                            marker.bindPopup(`
+                                <h3>${q}</h3>
+                                <p>No news available</p>
+                            `);
+                        }
+                        marker.openPopup();
+                    })
+                    .catch((error) => {
+                        // Handle errors by displaying a message
+                        console.error("Error fetching news data:", error);
+                        marker.bindPopup(`
+                            <h3>${q}</h3>
+                            <p>No news available</p>
+                        `);
+                        marker.openPopup();
+                    });
+            });
+        }
         function fillMap(){
             let i = 0;
             while (i<countryCodes.length){
                 variable = true;
-                displayArticles(countryCodes[i]);
-                if(variable){
-                    i++;
-                }
+                displayPins(countryCodes[i]);
+                //displayArticles(countryCodes[i]);
+
+                i++
             }
         }
         fillMap();
